added free art buffet post

--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -9,17 +9,19 @@
 		        "name": "logo.png"
 		    },
 		    {
-		        "type": "file",
-		        "name": ".DS_Store"
+		        "name": "studio",
+		        "type": "folder",
+		        "children": [
+		            {
+		                "type": "file",
+		                "name": "reg-day-banner.jpg"
+		            }
+		        ]
 		    },
 		    {
 		        "name": "img",
 		        "type": "folder",
 		        "children": [
-		            {
-		                "type": "file",
-		                "name": "_events-bg.jpg"
-		            },
 		            {
 		                "type": "file",
 		                "name": "about-bg.jpg"
@@ -46,6 +48,10 @@
 		            },
 		            {
 		                "type": "file",
+		                "name": "regday-group.jpg"
+		            },
+		            {
+		                "type": "file",
 		                "name": "post-bg.jpg"
 		            },
 		            {
@@ -54,17 +60,7 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "regday-group.jpg"
-		            }
-		        ]
-		    },
-		    {
-		        "name": "studio",
-		        "type": "folder",
-		        "children": [
-		            {
-		                "type": "file",
-		                "name": "reg-day-banner.jpg"
+		                "name": "_events-bg.jpg"
 		            }
 		        ]
 		    },
@@ -73,8 +69,14 @@
 		        "type": "folder",
 		        "children": [
 		            {
-		                "type": "file",
-		                "name": ".DS_Store"
+		                "name": "1-art-jam-thursday",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "1-poster.png"
+		                    }
+		                ]
 		            },
 		            {
 		                "name": "3-oday",
@@ -83,6 +85,58 @@
 		                    {
 		                        "type": "file",
 		                        "name": "oday-poster.jpeg"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "0-iridescence",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "0-Angie.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Crystal.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-group.jpg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Ivan.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Miriam.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Iris.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Nicholas.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Summer.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Victoria.png"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "4-free-art-buffet",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "4-poster.jpeg"
 		                    }
 		                ]
 		            },
@@ -104,6 +158,10 @@
 		                    },
 		                    {
 		                        "type": "file",
+		                        "name": "2-5-info2.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
 		                        "name": "2-4-info1.jpeg"
 		                    },
 		                    {
@@ -112,63 +170,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-5-info2.jpeg"
-		                    },
-		                    {
-		                        "type": "file",
 		                        "name": "2-vid.gif"
-		                    }
-		                ]
-		            },
-		            {
-		                "name": "1-art-jam-thursday",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "1-poster.png"
-		                    }
-		                ]
-		            },
-		            {
-		                "name": "0-iridescence",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "0-Angie.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Iris.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Ivan.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Miriam.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Nicholas.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Summer.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Victoria.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-group.jpg"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Crystal.png"
 		                    }
 		                ]
 		            }
