--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -1,6 +1,44 @@
 - 
     var posts = [
             {
+                link: "post-free-art-buffet",
+                subtitle: "𝙅𝙪𝙨𝙩 𝙚𝙭𝙥𝙧𝙚𝙨𝙨 𝙮𝙤𝙪𝙧𝙨𝙚𝙡𝙛!",
+                title: "Free Art Buffet",
+                date: "August 15, 2021",
+                eventDate: "6 Sep, 14 Sep",
+                imgDir: "4-free-art-buffet",
+                poster: "4-poster.jpeg",
+                content: [
+                    "我哋係9月會有兩次嘅free art buffet，大家18/8開始一連兩個禮拜都可以係Google form到reg🤩",
+                    "We will have 2 free art buffets in September! Students can start register from 18/8~ 31/8 via Google forms 🤩",
+                    "⬇️⬇️⬇️⬇️⬇️⬇️⬇️⬇️⬇️⬇️",
+                    "詳程 (Details):",
+                    "日期 (Date): 6/9 & 14/9",
+                    "時間(Time): 18:30~20:30 ",
+                    "地點(Venue): Art Studio, HKU",
+                    "名額(Quota): 12 participants",
+                    "費用(Fee): member $0；non-member $40",
+                    "",
+                    "🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈",
+                    "Free art buffet 係我地Art Club 每個月都會舉辦嘅恆常活動🤩 我哋提供一個舒適嘅環境俾大家係度進行創作～🤤🤤 同學可以用我哋Art studio入面嘅一切資源嚟創作自己獨一無二嘅畫作❣大家可以係度揮灑創意，享受創作嘅快樂😍😆仲可以識到一班一樣中意畫畫嘅志同道合，一齊交流心得🤓",
+                     
+                    "Free art buffet is a recurring activity of Art Club, held on a monthly basis 🤩 We provide a warm & cozy atmosphere for you to design and make art❣ Students can use all the materials provided in the Art Studio to create their own masterpieces 😍🤤 Here, you can unleash your creativity and joy through drawing. You can also meet new friends and inspire one another! 🤓",
+                    "🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈",
+                    "我哋會提供包括塑膠彩，油彩，水彩，廣告彩，木顏色，畫筆，畫板同埋畫紙等🖌️🖍️📏🎨仲有其他唔同嘅物料俾大家🥳🙆🏻‍♀️",
+                    "Materials provided: acrylic paint, oil paint, watercolor paint, poster color paint, pastels, paintbrushes, canvas, palette, painting paper, etc.",
+                    "🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈🌈",
+                    "",
+                    "＊非會員繳費後即時成為Art Club 會員＊",
+                    "* Non-members will become Art Club member automatically upon payment of fee *",
+                    "＊如報名人數過多，名額將以抽籤形式分配＊",
+                    "* Drawing lots principle shall be used if the number of applicants exceeds the quota*",
+                    "如有任何查詢，歡迎係ig 或者facebook dm我哋或者電郵至artclubhkusu@gmail.com",
+                    "If you have any enquiries, feel free to contact us through social media (IG or Facebook) or send an email to artclubhkusu@gmail.com",
+                ],
+                signupMessage: "Register Now!",
+                signupLink: "https://docs.google.com/forms/d/e/1FAIpQLSfee-VEBTDEVkejkk6L3Fl4k-sArHHWGLprzZEuHMXQRolX0g/viewform?usp=sf_link",
+            },
+            {
                 link: "post-oday",
                 subtitle: "𝙒𝙚’𝙧𝙚 𝙤𝙛𝙛 𝙩𝙤 𝙨𝙚𝙚 𝙩𝙝𝙚 𝙒𝙞𝙯𝙖𝙧𝙙, 𝙩𝙝𝙚 𝙬𝙤𝙣𝙙𝙚𝙧𝙛𝙪𝙡 𝙒𝙞𝙯𝙖𝙧𝙙 𝙤𝙛 𝙊𝙯.",
                 title: "Orientation Day",
@@ -123,6 +161,8 @@
                     "@freeland__",
                     "@september_9s",
                 ],
+                signupMessage: "Register as Member NOW!",
+                signupLink: "https://forms.gle/H2TDBhJv6WUSXRmT7",
             },
             {
                 link: "post-iridescence",
@@ -142,8 +182,6 @@
                     "❦ We hope that all of you can actively participate in our upcoming workshops and support Art Club as usual~.",
                     "❦ Can’t wait to meet you all in the Art Studio!!! (๑❛ᴗ❛๑)۶♥",
                 ],
-                signupMessage: "Register As Member Now!",
-                signupLink: 'https://forms.gle/H2TDBhJv6WUSXRmT7',
             },
         ]
 
