updated reg day post

--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -32,10 +32,6 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "contact-bg.jpg"
-		            },
-		            {
-		                "type": "file",
 		                "name": "directions.png"
 		            },
 		            {
@@ -45,6 +41,10 @@
 		            {
 		                "type": "file",
 		                "name": "gallery-bg.jpg"
+		            },
+		            {
+		                "type": "file",
+		                "name": "contact-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -79,22 +79,12 @@
 		                ]
 		            },
 		            {
-		                "name": "3-oday",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "oday-poster.jpeg"
-		                    }
-		                ]
-		            },
-		            {
 		                "name": "0-iridescence",
 		                "type": "folder",
 		                "children": [
 		                    {
 		                        "type": "file",
-		                        "name": "0-Angie.png"
+		                        "name": "0-group.jpg"
 		                    },
 		                    {
 		                        "type": "file",
@@ -102,11 +92,11 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "0-group.jpg"
+		                        "name": "0-Angie.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "0-Ivan.png"
+		                        "name": "0-Iris.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -114,7 +104,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "0-Iris.png"
+		                        "name": "0-Ivan.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -141,9 +131,23 @@
 		                ]
 		            },
 		            {
+		                "name": "3-oday",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "oday-poster.jpeg"
+		                    }
+		                ]
+		            },
+		            {
 		                "name": "2-reg-day",
 		                "type": "folder",
 		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "2-0-cover.jpeg"
+		                    },
 		                    {
 		                        "type": "file",
 		                        "name": "2-1-cover.jpeg"
@@ -154,7 +158,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-3-cover2.jpeg"
+		                        "name": "2-4-info1.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
@@ -162,7 +166,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-4-info1.jpeg"
+		                        "name": "2-3-cover2.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
