--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -122,8 +122,11 @@
                 date: "August 11, 2021",
                 eventDate: "15 Aug",
                 imgDir: "2-reg-day",
-                poster: "2-vid.gif",
+                poster: "2-0-cover.jpeg",
                 content: [
+                    "一連3日嘅Reg Day終於完啦！多謝晒大家嘅支持！！☺️❤️🙏🏻",
+                    "Please stay tuned for our upcoming events and workshops!! 😆💕",
+                    "",
                     "【𝐇𝐊𝐔 𝐑𝐞𝐠𝐢𝐬𝐭𝐫𝐚𝐭𝐢𝐨𝐧 𝐃𝐚𝐲】ʕ•ᴥ•ʔ",
                     "",
                     "———————————————",
