--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -24,7 +24,7 @@ html(lang='en')
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-md-10.col-lg-8.col-xl-7
                         .site-heading
-                            h1 Art Cub HKUSU
+                            h1 Art Club HKUSU
                             span.subheading 香港大學學生會美術學會
         
         include includes/posts-data.pug
