added oil painting post

--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -32,7 +32,7 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "events-bg.jpg"
+		                "name": "contact-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -40,7 +40,7 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "contact-bg.jpg"
+		                "name": "events-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -96,7 +96,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "0-Ivan.png"
+		                        "name": "0-Iris.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -104,15 +104,15 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "0-Iris.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-Nicholas.png"
+		                        "name": "0-Ivan.png"
 		                    },
 		                    {
 		                        "type": "file",
 		                        "name": "0-Summer.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-Nicholas.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -127,16 +127,6 @@
 		                    {
 		                        "type": "file",
 		                        "name": "oday-poster.jpeg"
-		                    }
-		                ]
-		            },
-		            {
-		                "name": "4-free-art-buffet",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "4-poster.jpeg"
 		                    }
 		                ]
 		            },
@@ -170,11 +160,31 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-vid.gif"
+		                        "name": "2-6-info3.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-6-info3.jpeg"
+		                        "name": "2-vid.gif"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "4-free-art-buffet",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "4-poster.jpeg"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "5-oil-painting",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "5-poster.png"
 		                    }
 		                ]
 		            }
