--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -1,6 +1,46 @@
 - 
     var posts = [
             {
+                link: "post-oil-painting",
+                subtitle: "Introduction Oil Painting Course",
+                title: "Oil Painting Workshop",
+                date: "August 30, 2021",
+                eventDate: "29 Sep, 6 Oct, 13 Oct",
+                imgDir: "5-oil-painting",
+                poster: "5-poster.png",
+                content: [
+                    "你知唔知道Oil Painting Workshop同Free Art Buffet最大嘅分別喺邊度? 😎😎 ",
+                    "冇錯啦就係我哋呢一個Workshop係會由專業嘅本地藝術家/導師教你哋！🥳🥳",
+                    "",
+                    "所以即使你唔識得畫畫都唔緊要！只要參加呢一個workshop，包你畫到滿意為止！🎨✍🏻而且我哋嘅學費收嘅費用卑出邊學平好多！！",
+                    "平均出邊學畫畫一堂都要$150或以上😢😢但係呢度我哋$160就可以學3堂！！！仲要係每堂三個鐘！！即係話平均每一堂只需要大概50幾蚊/3hours！！",
+                    "😱😱😨😱🤯😳😱😳😱😳😱所以話真係抵到爛㗎！！",
+                    "",
+                    "日期：29/9，6/10 以及 13/10",
+                    "時間：4:30-7:30pm （每一節3小時）",
+                    "内容：靜物繪畫，顏色理論，基本油畫技巧",
+                    "費用：",
+                    "🤩$160/3堂 （只限於會員）",
+                    "🤩$200/3 堂 （非會員） ",
+                    "6/9開始接受報名！🤩🤩🥳名額非常有限先到先得！！🥳🥳 請盡早報名！！",
+                    "",
+                    "Do you know what is the biggest difference between the Oil Painting Workshop and Free Art Buffet? 😎😎",
+                    "That’s right! In the Oil Painting workshop, we have invited professional local artist to guide you on your journey to learn oil painting! 🥳🥳",
+                    "So even if you have never tried oil painting or even drawing before, you should still join us! Join the workshop, and you are guaranteed that you will paint until you are satisfied! Moreover, the Oil Painting Workshop is charging a fee way lower than market fee!!",
+                    "😱😱😨😱🤯😳😱😳😱😳😱",
+                    "",
+                    "Dates: 29/9, 6/10, and 13/10",
+                    "Time: 4:30 – 7:30 (3 hours per session)",
+                    "Content: Still life painting, colour theory, fundamental oil painting techniques.",
+                    "Fee: ",
+                    "🤩$160/3 sessions (members)",
+                    "🤩$200/3 sessions (non-members)",
+                    "Application opens on 6/9! 🤩🤩🥳 Limited quote, first come first serve! 🥳🥳 Signup now!",
+                ],
+                signupMessage: "Register Now!",
+                signupLink: "https://forms.gle/96oTKavyFTyJRnr4A",
+            },
+            {
                 link: "post-free-art-buffet",
                 subtitle: "𝙅𝙪𝙨𝙩 𝙚𝙭𝙥𝙧𝙚𝙨𝙨 𝙮𝙤𝙪𝙧𝙨𝙚𝙡𝙛!",
                 title: "Free Art Buffet",
@@ -205,11 +245,11 @@
                 title: "Light Up the Night",
                 subtitle: "Lantern Workshop",
             },
-            {
-                eventDate: "Sep",
-                title: "Oil Painting 101",
-                subtitle: "Oil Painting Workshop",
-            },
+            //- {
+            //-     eventDate: "Sep",
+            //-     title: "Oil Painting 101",
+            //-     subtitle: "Oil Painting Workshop",
+            //- },
             {
                 eventDate: "Sep",
                 title: "Tea gathering I: Namaste!",
