--- a/src/pug/post-oil-painting.pug
+++ b/src/pug/post-oil-painting.pug
@@ -57,7 +57,7 @@ html(lang='en')
                                 a(href='https://www.instagram.com/hauki_classroom_/') 
                                     | @hauki_classroom_
                             
-                                a(href='https://www.instagram.com/laidback_painting//') 
+                                a(href='https://www.instagram.com/laidback_painting/') 
                                     | @laidback_painting
                             br
 
