modified oil painting descriptions

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -20,13 +20,16 @@
                     "時間：4:30-7:30pm （每一節3小時）",
                     "内容：靜物繪畫，顏色理論，基本油畫技巧",
                     "費用：",
-                    "🤩$160/3堂 （只限於會員）",
+                    "🤩$160/3堂 （只限於會員）*",
                     "🤩$200/3 堂 （非會員） ",
-                    "6/9開始接受報名！🤩🤩🥳名額非常有限先到先得！！🥳🥳 請盡早報名！！",
+                    "*非會員會在繳費後自動成爲會員",
                     "",
-                    "Do you know what is the biggest difference between the Oil Painting Workshop and Free Art Buffet? 😎😎",
-                    "That’s right! In the Oil Painting workshop, we have invited professional local artist to guide you on your journey to learn oil painting! 🥳🥳",
-                    "So even if you have never tried oil painting or even drawing before, you should still join us! Join the workshop, and you are guaranteed that you will paint until you are satisfied! Moreover, the Oil Painting Workshop is charging a fee way lower than market fee!!",
+                    "6/9開始接受報名！🤩🤩🥳名額非常有限先到先得！！🥳🥳 請盡早報名！！",
+                    "如有任何查詢，歡迎係ig 或者facebook dm我哋或者電郵至artclubhkusu@gmail.com",
+                    "",
+                    "Do you know what the biggest difference between the Oil Painting Workshop and Free Art Buffet is? 😎😎",
+                    "That’s right! In the Oil Painting workshop, we have invited a professional local artist to guide you on your journey to learn oil painting! 🥳🥳",
+                    "So, even if you have never tried oil painting or even drawing before, you are still welcome to join us! If you join, we guarantee that you will paint until you are satisfied! Moreover, for the Oil Painting Workshop, the fee we charge is very affordable and way lower than what you can find elsewhere!!",
                     "😱😱😨😱🤯😳😱😳😱😳😱",
                     "",
                     "Dates: 29/9, 6/10, and 13/10",
@@ -34,8 +37,11 @@
                     "Content: Still life painting, colour theory, fundamental oil painting techniques.",
                     "Fee: ",
                     "🤩$160/3 sessions (members)",
-                    "🤩$200/3 sessions (non-members)",
+                    "🤩$200/3 sessions (non-members)*",
+                    "*Non-members will become Art Club member automatically upon payment of fee",
+                    "",
                     "Application opens on 6/9! 🤩🤩🥳 Limited quote, first come first serve! 🥳🥳 Signup now!",
+                    "If you have any questions, feel free to direct message us on social media (IG or Facebook) or send us an email at artclubhkusu@gmail.com",
                 ],
                 signupMessage: "Register Now!",
                 signupLink: "https://forms.gle/96oTKavyFTyJRnr4A",
